--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
@@ -76,9 +76,9 @@
     <main>
         <section id="opportunity" class="min-h-screen flex items-center bg-white" x-intersect.threshold.50="activeSection = 'opportunity'">
             <div class="container mx-auto px-6 py-16 text-center">
-                <h1 class="text-5xl md:text-7xl font-black text-gray-800 leading-tight mb-4">The Next Frontier of Value Creation.</h1>
-                <p class="text-xl md:text-2xl secondary-text max-w-4xl mx-auto mb-8">We are unlocking trillions in dormant asset value and igniting a fundamental shift in how humanity lives. Not another proptech gimmick, but a <span class="accent-text font-semibold">core utility for 21st-century mobility.</span></p>
-                <p class="text-lg md:text-xl text-gray-500 max-w-3xl mx-auto">The internet has eaten commerce, media, and communication. It's time it truly ate <strong class="font-bold text-gray-800">living.</strong></p>
+                <h1 class="text-5xl md:text-7xl font-black text-gray-800 leading-tight mb-4">HomeShift: Your Home. Your Next Adventure.</h1>
+                <p class="text-xl md:text-2xl font-semibold accent-text max-w-4xl mx-auto mb-8">A New Way to Live, Explore, and Thrive Without Buying or Renting.</p>
+                <p class="text-lg md:text-xl text-gray-500 max-w-3xl mx-auto">HomeShift is a revolutionary platform for homeowners to seamlessly exchange homes for extended periods, opening doors to new cities, lifestyles, or temporary relocations without the massive costs and hassles of traditional real estate. It's time to unlock trillions in dormant asset value and ignite a fundamental shift in how humanity lives.</p>
             </div>
         </section>
 
@@ -132,7 +132,7 @@
         <section id="solution" class="py-20 md:py-32 bg-gray-800 text-white" x-intersect.threshold.50="activeSection = 'solution'">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-4xl md:text-5xl section-title">HomeShift: The Operating System for Distributed Living.</h2>
-                <p class="mt-4 text-lg text-gray-300 max-w-3xl mx-auto">This is not a rental. This is <span class="text-teal-300 font-semibold">reciprocal asset optimization.</span></p>
+                <p class="mt-4 text-lg text-gray-300 max-w-3xl mx-auto">HomeShift empowers homeowners to embark on long-term home exchanges. You continue to own your home, and simply swap living spaces with a trusted counterpart. It's a game-changing way to experience new places, try new lifestyles, or manage life transitions without the financial burden of buying or continuous renting. This is how we bring unprecedented flexibility to your doorstep.</p>
 
                 <div class="mt-16 grid md:grid-cols-3 gap-12 max-w-5xl mx-auto">
                     <div class="flex flex-col items-center">
@@ -194,7 +194,7 @@
                              <ul class="space-y-2 text-gray-600">
                                 <li class="flex items-start"><span class="accent-text mr-2 mt-1">✓</span><span><strong>Lifestyle Equivalency:</strong> Matching beyond specs to align on living experience.</span></li>
                                 <li class="flex items-start"><span class="accent-text mr-2 mt-1">✓</span><span><strong>Daisy Chain Logic:</strong> Multi-party swaps dramatically increase market liquidity.</span></li>
-                                <li class="flex items-start"><span class="accent-text mr-2 mt-1">✓</span><span><strong>AI-Powered Suggestions:</strong> Proactive, personalized recommendations transform search into discovery.</span></li>
+                                <li class="flex items-start"><span class="accent-text mr-2 mt-1">✓</span><span><strong>AI-Powered Suggestions:</strong> Proactively recommends matches based on user behavior and platform-wide trends.</span></li>
                             </ul>
                         </div>
                     </div>
