--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomeShift: The Trillion-Dollar Opportunity in Distributed Living</title>
+    <title>HomeExchange: The Trillion-Dollar Opportunity in Distributed Living</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,7 +62,7 @@
 
     <header class="bg-white/80 backdrop-blur-lg sticky top-0 z-50 shadow-sm">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#opportunity" class="text-2xl font-bold accent-text">HomeShift</a>
+            <a href="#opportunity" class="text-2xl font-bold accent-text">HomeExchange</a>
             <div class="hidden md:flex items-center space-x-8">
                 <a href="#friction" class="nav-link text-gray-600 hover:accent-text" :class="{ 'accent-text active': activeSection === 'friction' }">The Problem</a>
                 <a href="#solution" class="nav-link text-gray-600 hover:accent-text" :class="{ 'accent-text active': activeSection === 'solution' }">The Solution</a>
@@ -76,9 +76,9 @@
     <main>
         <section id="opportunity" class="min-h-screen flex items-center bg-white" x-intersect.threshold.50="activeSection = 'opportunity'">
             <div class="container mx-auto px-6 py-16 text-center">
-                <h1 class="text-5xl md:text-7xl font-black text-gray-800 leading-tight mb-4">HomeShift: Your Home. Your Next Adventure.</h1>
+                <h1 class="text-5xl md:text-7xl font-black text-gray-800 leading-tight mb-4">HomeExchange: Your Home. Your Next Adventure.</h1>
                 <p class="text-xl md:text-2xl font-semibold accent-text max-w-4xl mx-auto mb-8">A New Way to Live, Explore, and Thrive Without Buying or Renting.</p>
-                <p class="text-lg md:text-xl text-gray-500 max-w-3xl mx-auto">HomeShift is a revolutionary platform for homeowners to seamlessly exchange homes for extended periods, opening doors to new cities, lifestyles, or temporary relocations without the massive costs and hassles of traditional real estate. It's time to unlock trillions in dormant asset value and ignite a fundamental shift in how humanity lives.</p>
+                <p class="text-lg md:text-xl text-gray-500 max-w-3xl mx-auto">HomeExchange is a revolutionary platform for homeowners to seamlessly exchange homes for extended periods, opening doors to new cities, lifestyles, or temporary relocations without the massive costs and hassles of traditional real estate. It's time to unlock trillions in dormant asset value and ignite a fundamental shift in how humanity lives.</p>
             </div>
         </section>
 
@@ -131,8 +131,8 @@
 
         <section id="solution" class="py-20 md:py-32 bg-gray-800 text-white" x-intersect.threshold.50="activeSection = 'solution'">
             <div class="container mx-auto px-6 text-center">
-                <h2 class="text-4xl md:text-5xl section-title">HomeShift: The Operating System for Distributed Living.</h2>
-                <p class="mt-4 text-lg text-gray-300 max-w-3xl mx-auto">HomeShift empowers homeowners to embark on long-term home exchanges. You continue to own your home, and simply swap living spaces with a trusted counterpart. It's a game-changing way to experience new places, try new lifestyles, or manage life transitions without the financial burden of buying or continuous renting. This is how we bring unprecedented flexibility to your doorstep.</p>
+                <h2 class="text-4xl md:text-5xl section-title">HomeExchange: The Operating System for Distributed Living.</h2>
+                <p class="mt-4 text-lg text-gray-300 max-w-3xl mx-auto">HomeExchange empowers homeowners to embark on long-term home exchanges. You continue to own your home, and simply swap living spaces with a trusted counterpart. It's a game-changing way to experience new places, try new lifestyles, or manage life transitions without the financial burden of buying or continuous renting. This is how we bring unprecedented flexibility to your doorstep.</p>
 
                 <div class="mt-16 grid md:grid-cols-3 gap-12 max-w-5xl mx-auto">
                     <div class="flex flex-col items-center">
@@ -165,7 +165,7 @@
         <section id="sauce" class="py-20 md:py-32" x-data="{ openPillar: '' }" x-intersect.threshold.50="activeSection = 'sauce'">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
-                    <h2 class="text-4xl md:text-5xl section-title text-gray-800">Our Secret Sauce: The Pillars of HomeShift.</h2>
+                    <h2 class="text-4xl md:text-5xl section-title text-gray-800">Our Secret Sauce: The Pillars of HomeExchange.</h2>
                     <p class="mt-4 text-lg secondary-text max-w-3xl mx-auto">This isn't just an idea; it's an engineered solution to deeply complex problems. Click each pillar to learn more.</p>
                 </div>
 
@@ -201,7 +201,7 @@
                     <div @click="openPillar = openPillar === 'legal' ? '' : 'legal'" class="cursor-pointer bg-white p-8 rounded-2xl shadow-lg card-hover">
                         <div class="flex items-center mb-4">
                             <div class="w-12 h-12 rounded-full accent-bg text-white flex items-center justify-center text-2xl mr-4">⚖️</div>
-                            <h3 class="text-2xl font-bold">HomeShift Legal Guardian</h3>
+                            <h3 class="text-2xl font-bold">HomeExchange Legal Guardian</h3>
                         </div>
                         <p class="secondary-text">Solves the #3 user concern: "What about legal and insurance headaches?"</p>
                          <div x-show="openPillar === 'legal'" x-cloak x-transition class="mt-6 border-t pt-4">
@@ -262,9 +262,9 @@
         <section id="vision" class="py-20 md:py-40 bg-gray-800 text-white" x-intersect.threshold.50="activeSection = 'vision'">
              <div class="container mx-auto px-6 text-center">
                 <h2 class="text-4xl md:text-5xl font-black text-white leading-tight mb-6">Join the Shift.</h2>
-                <p class="text-xl md:text-2xl text-gray-300 max-w-4xl mx-auto mb-12">HomeShift isn't just a business opportunity; it's a chance to fundamentally redefine "home" and "mobility" for millions. It's about empowering people to live more freely, experience more authentically, and unlock the latent potential of their most valuable asset.</p>
+                <p class="text-xl md:text-2xl text-gray-300 max-w-4xl mx-auto mb-12">HomeExchange isn't just a business opportunity; it's a chance to fundamentally redefine "home" and "mobility" for millions. It's about empowering people to live more freely, experience more authentically, and unlock the latent potential of their most valuable asset.</p>
                 <div class="inline-block bg-white text-gray-800 font-bold text-xl px-8 py-4 rounded-lg shadow-lg">
-                    HomeShift: Let's shift the future of living.
+                    HomeExchange: Let's shift the future of living.
                 </div>
             </div>
         </section>
@@ -272,7 +272,7 @@
     
     <footer class="bg-gray-900 text-gray-400 py-6">
         <div class="container mx-auto px-6 text-center">
-            <p>&copy; 2025 HomeShift Inc. A conceptual project.</p>
+            <p>&copy; 2025 HomeExchange Inc. A conceptual project.</p>
         </div>
     </footer>
 
@@ -310,7 +310,7 @@
         const tamChart = new Chart(tamChartCtx, {
             type: 'bar',
             data: {
-                labels: ['Existing Vacation Exchange Market', 'HomeShift True TAM (Flexible Living)'],
+                labels: ['Existing Vacation Exchange Market', 'HomeExchange True TAM (Flexible Living)'],
                 datasets: [{
                     label: 'Market Size (in Billions USD)',
                     data: [12.7, 450],
